[package]
name        = "hayashi-plugin-sdk"
version     = "0.1.0"
edition     = "2021"
description = "SDK for building native and WebAssembly plugins for the Hayashi econometrics language"
license     = "MIT"
repository  = "https://github.com/sheep-farm/hayashi-plugin-sdk"
keywords    = ["hayashi", "econometrics", "plugin", "ffi", "wasm"]

[dependencies]
hayashi-plugin-sdk-macros = { version = "0.1.0", path = "../macros" }
serde_json = "1"
arrow = { version = "59", default-features = false, features = ["ffi"] }

